[project]
name = "veo3-workflow-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.6.3",
    "pydantic-settings>=2.10.1",
    "python-dotenv>=1.1.1",
    "defusedxml>=0.7.1",
    "pydantic-ai>=0.6.2",
    "tavily-python>=0.7.10",
    "google-genai>=1.8.0",
    "ipywidgets>=8.0.0",
    "requests>=2.31.0",
    "ipython>=9.4.0",
    "ipykernel>=6.30.1",
    "nest-asyncio>=1.6.0",
]

[project.scripts]
langraph-agents = "langraph_agents.cli:main"
pydantic-ai-agents = "pydantic_ai_agents.cli:main"
workflow-agents = "workflow_main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pydantic_ai_agents = ["prompts/*"]
